This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
5/25/20: Made SetProbeMode command accept lower case, not change mode with
a bad entry, and not abort the script after changing mode (In 3.7).

5/24/20: Added ability to acquire simple or aligned sums of each tilt angle
when taking a frame tilt series with K2 or K3.  Added some script commands
for experimental use of this.

5/24/20: Added script commands for getting scale matrices for converting
between various coordinate systems (IS, stage, etc).

5/24/20: Added JeolHasBrightnessZoom property to specify that the version
of TemExt.dll allows use of the BrightnessZoom function.

5/24/20: Fixed screen current scaling for JEOL and converted the scaling
factor of 0.059 commonly found in properties to 1.

5/11/20: Changes to ease use of diffraction mode in Search on JEOL.

5/11/20: Added property RestoreStageXYdelay to set delay after stage restore
on tilting.

5/7/20: Fixed TSDosymBacklashDir property which had no effect, and limited one
angle of dose-symmetric series by the max tilt angle minus backlash.  Also
defaulted max tilt angle to 69.9 for Titans (if UseIllumatedArea set).

5/6/20: SEM_3-8-0beta9
4/29/20: Fixed pixel size stored in TIFF files.

4/28/20: Added property TiltSpeedFactor to set a default tilt speed.

4/23/20: Fixed problems in hole finding: a large memory leak, a potential
crash, reloading montages as integers, laying out points in groups.  Also
made it runnable from script commands with the dialog not open and prevented
multiple conversions of found points to Nav points.

4/23/20: Added routine, dialog, and script commands for combining a regular
array of points into a subset set up for multi-shot acquisition.

4/20/20: Added script commands ReportItemImageCoords and CircularSubareaMean.
